# jp-transit-search

./: .coverage  .gitignore  AGENTS.md  CRAWLING_FEATURES.md  README.md  analyze_prefecture_data.py  analyze_yahoo_data.py  complete_stations_export.csv  complete_stations_export.json  coverage.xml  debug_city_bug.py  debug_html_structure.py  debug_ofuna_haneda.html  debug_ofuna_haneda.py  debug_platform.py  debug_platform_structures.py  debug_stop_info.py  debug_stop_parsing.py  debug_yokohama_shibuya.html  download_html_samples.py  download_station_sample.py  pyproject.toml  quickstart.py  sample_stations_20251030_203333.csv  test_city_extraction.py  update_prefecture_ids.py  validate_station_fields.py
.github/workflows/: ci.yml  opencode.yml  update-stations.yml
data/: stations.csv
src/jp_transit_search/: __init__.py
src/jp_transit_search/cli/: __init__.py  formatters.py  main.py  station_commands.py
src/jp_transit_search/core/: __init__.py  exceptions.py  models.py  scraper.py
src/jp_transit_search/crawler/: __init__.py  station_crawler.py
src/jp_transit_search/mcp/: __init__.py  server.py
src/jp_transit_search/utils/: __init__.py  japanese_text.py
tests/: conftest.py  test_mcp_integration.py
tests/fixtures/: test_manifest.csv
tests/fixtures/prefecture_pages/: prefecture_東京都.html
tests/fixtures/search_results/: final_test.html  search_五反田.html  search_大崎.html  search_大船新宿.html  search_大船渋谷.html  search_大船羽田空港.html  search_横浜渋谷_cheapest.html  search_横浜渋谷_easiest.html  search_横浜渋谷_fastest.html  search_横浜豊洲.html
tests/fixtures/station_pages/: station_20042_yamanose_line.html  station_20470_sapporo_line.html  station_22715_shibuya_jr_yamanote.html  station_22826_tokyu_meguro_line.html  station_23018_tokyu_meguro_line.html  station_27244_hiroshima_astram.html
tests/unit/: test_cli.py  test_crawler.py  test_formatters.py  test_japanese_text.py  test_mcp_server.py  test_models.py  test_scraper.py  test_station_cli.py
utils/: README.md  test_mcp_route_search.sh  test_mcp_station_search.sh  test_route_search.sh  test_station_search.sh
